STVN > Fix overflow x

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -4,6 +4,6 @@
 
 @layer base {
     body {
-        @apply bg-black font-sans;
+        @apply bg-black overflow-x-hidden font-sans;
     }
 }
